# csv2parquet

./: Cargo.toml  LICENSE  README.md
data/: test.csv
src/: main.rs
